--- a/flutter_gank/pubspec.yaml
+++ b/flutter_gank/pubspec.yaml
@@ -8,6 +8,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
+  english_words: ^3.1.0
+  flutter_webview_plugin: "^0.1.5"
+  url_launcher: ^3.0.0
+
+
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +29,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+     - images/empty_data.png
+     - images/ic_launcher.png
+     - images/profile_cover.jpg
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
